Mesh with Emission material becomes black if strength is higher than 82000 #38129

Closed
opened 2014-01-08 17:47:02 +01:00 by Jacques Lucke · 11 comments
Member

System Information
Windows 7
Nvidia quadro 600

Blender Version
2.69.8 Hash: 7647a2b and 2.69 official

Short description of error
Mesh with Emission material becomes black when strength is higher than 82000.

Exact steps for others to reproduce the error

  1. Open the default Scene
  2. Switch to cycles and go to rendered view
  3. Change the material of the cube to Emission
  4. Set the Strength to 82000 or higher
  5. -> cube is black with a white outline

Also tested on another Computer: did only work as aspected on GPU (GTX770) but not on CPU.

white_cube.PNG

black_cube.PNG

**System Information** Windows 7 Nvidia quadro 600 **Blender Version** 2.69.8 Hash: 7647a2b and 2.69 official **Short description of error** Mesh with Emission material becomes black when strength is higher than 82000. **Exact steps for others to reproduce the error** 1. Open the default Scene 2. Switch to cycles and go to rendered view 3. Change the material of the cube to Emission 4. Set the Strength to 82000 or higher 5. -> cube is black with a white outline Also tested on another Computer: did only work as aspected on GPU (GTX770) but not on CPU. ![white_cube.PNG](https://archive.blender.org/developer/F64237/white_cube.PNG) ![black_cube.PNG](https://archive.blender.org/developer/F64236/black_cube.PNG)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke

Added subscriber: @brecht

Added subscriber: @brecht

I could reproduce the problem on OS X, probably it's either Windows specific or due to some particular scene setup that is missing from the description.

I could reproduce the problem on OS X, probably it's either Windows specific or due to some particular scene setup that is missing from the description.
Author
Member

This happens also after I set back to factory Settings if you mean that?

This happens also after I set back to factory Settings if you mean that?

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Confimed on Win 7 x64, with fa88c7f (msvc 2008).

Confimed on Win 7 x64, with fa88c7f (msvc 2008).

This issue was referenced by blender/blender-addons-contrib@4d72a5e34a

This issue was referenced by blender/blender-addons-contrib@4d72a5e34a2f3e530f34ddc2d48adad390254203

This issue was referenced by 4d72a5e34a

This issue was referenced by 4d72a5e34a2f3e530f34ddc2d48adad390254203

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4d72a5e34a.

Closed by commit 4d72a5e34a.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38129
No description provided.